# LensLoop

./: .gitignore  README.md  capture_timelapse.py  create_video.py  livestream_page.html  make_video.py  pyproject.toml  requirements.txt  serve.py  serve_video.py  start.sh  video_page.html
app/: camera.py  capture.py  server.py  timelapse.py  video.py
backend/: config.py  database.py  main.py
backend/models/: schemas.py
backend/routers/: camera.py  preview.py  schedule.py  settings.py  stream.py  timelapse.py  videos.py  ws.py
backend/services/: camera.py  capture.py  encoder.py  scheduler.py  settings_store.py  state.py  video_library.py
backend/tests/: conftest.py  test_camera_capabilities.py  test_encoder.py  test_preview_api.py  test_schedule_api.py  test_scheduler.py  test_state.py  test_timelapse_api.py  test_video_library.py  test_videos_api.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  api.js  index.css
frontend/src/components/: ActiveCaptureBanner.jsx  ProgressBar.jsx  ProgressRing.jsx  QualitySelector.jsx  Sidebar.jsx  StatCard.jsx  TopBar.jsx  VideoPlayer.jsx
frontend/src/hooks/: useCapabilities.js  useStatus.js  useVideos.js
frontend/src/pages/: Capture.jsx  Dashboard.jsx  Library.jsx  LiveStream.jsx  Schedule.jsx  Settings.jsx
static/: index.html  timelapse_page.html
